--- a/actual/CMakeLists.txt
+++ b/actual/CMakeLists.txt
@@ -9,9 +9,32 @@ project (LearnOpenGL)
 
 #set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/modules/")
 
-if(WIN32)
-	set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
-endif(WIN32)
+
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
+
+
+
+
+
+
+
+
+set(Glfw_Main "C:/Users/jason/Desktop/libraries/glfw/glfw-3.2.1.bin.WIN32")
+set(Glfw_DIR "${Glfw_Main}/lib-vc2015")
+
+set(Glad_Main "C:/Users/jason/Desktop/libraries/glad")
+set(Glad_DIR "${Glad_Main}")
+
+include_directories(LearnOpenGL "${Glad_Main}/include")
+include_directories("glad" PRIVATE "${Glfw_Main}/include")
+include_directories(LearnOpenGL "${Glfw_Main}/include")
+
+add_library("glad" "${Glad_DIR}/src/glad.c")
+
+
+
+
+
 
 #link_directories(${CMAKE_SOURCE_DIR}/lib)
 
@@ -33,12 +56,6 @@ endif(WIN32)
 
 set(CHAPTERS
     1.getting_started
-    2.lighting
-    3.model_loading
-    4.advanced_opengl
-    5.advanced_lighting
-    6.pbr
-    7.in_practice
 )
 
 set(1.getting_started
@@ -49,97 +66,8 @@ set(1.getting_started
     2.3.hello_triangle_exercise1
     2.4.hello_triangle_exercise2
     2.5.hello_triangle_exercise3
-    3.1.shaders_uniform
-    3.2.shaders_interpolation
-    3.3.shaders_class
-    4.1.textures
-    4.2.textures_combined
-    4.3.textures_exercise2
-    4.4.textures_exercise3
-    4.5.textures_exercise4
-    5.1.transformations
-    5.2.transformations_exercise2
-    6.1.coordinate_systems
-    6.2.coordinate_systems_depth
-    6.3.coordinate_systems_multiple
-    7.1.camera_circle
-    7.2.camera_keyboard_dt
-    7.3.camera_mouse_zoom
-    7.4.camera_class
 )
 
-set(2.lighting
-    1.colors
-    2.1.basic_lighting_diffuse
-    2.2.basic_lighting_specular
-    3.1.materials
-    3.2.materials_exercise1
-    4.1.lighting_maps_diffuse_map
-    4.2.lighting_maps_specular_map
-    4.3.lighting_maps_exercise4
-    5.1.light_casters_directional
-    5.2.light_casters_point
-    5.3.light_casters_spot
-    5.4.light_casters_spot_soft
-    6.multiple_lights
-)
-
-set(3.model_loading
-    1.model_loading
-)
-
-set(4.advanced_opengl
-    1.1.depth_testing
-    1.2.depth_testing_view
-    2.stencil_testing
-    3.1.blending_discard
-    3.2.blending_sort
-    5.1.framebuffers
-    5.2.framebuffers_exercise1
-    6.1.cubemaps_skybox
-    6.2.cubemaps_environment_mapping
-    8.advanced_glsl_ubo
-    9.1.geometry_shader_houses
-    9.2.geometry_shader_exploding
-    9.3.geometry_shader_normals
-    10.1.instancing_quads
-    10.2.asteroids
-    10.3.asteroids_instanced
-    11.anti_aliasing_offscreen
-)
-
-set(5.advanced_lighting
-    1.advanced_lighting
-    2.gamma_correction
-    3.1.1.shadow_mapping_depth
-    3.1.2.shadow_mapping_base
-    3.1.3.shadow_mapping
-    3.2.1.point_shadows
-    3.2.2.point_shadows_soft
-    4.normal_mapping
-    5.1.parallax_mapping
-    5.2.steep_parallax_mapping
-    5.3.parallax_occlusion_mapping
-    6.hdr
-    7.bloom
-    8.1.deferred_shading
-    8.2.deferred_shading_volumes
-    9.ssao
-)
-
-set(6.pbr
-    1.1.lighting
-    1.2.lighting_textured
-    2.1.1.ibl_irradiance_conversion
-    2.1.2.ibl_irradiance
-    2.2.1.ibl_specular
-    2.2.2.ibl_specular_textured
-)
-
-set(7.in_practice
-    1.debugging
-    # 2.text_rendering
-)
 
 
 
@@ -170,15 +98,11 @@ foreach(CHAPTER ${CHAPTERS})
         set(NAME "${CHAPTER}__${DEMO}")
         add_executable(${NAME} ${SOURCE})
         target_link_libraries(${NAME} ${LIBS})
-        if(WIN32)
-            set_target_properties(${NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin/${CHAPTER}")
-        elseif(UNIX AND NOT APPLE)
-            set_target_properties(${NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/bin/${CHAPTER}")
-        elseif(APPLE)
-            set_target_properties(${NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/bin/${CHAPTER}")
-            set_target_properties(${NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_CURRENT_BINARY_DIR}/bin/${CHAPTER}")
-            set_target_properties(${NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_CURRENT_BINARY_DIR}/bin/${CHAPTER}")
-        endif(WIN32)
+		
+		target_link_libraries (${NAME} "${Glfw_DIR}/glfw3.lib")
+		target_link_libraries (${NAME} "glad")
+
+        set_target_properties(${NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin/${CHAPTER}")
         # copy shader files to build directory
         file(GLOB SHADERS
                  "src/${CHAPTER}/${DEMO}/*.vs"
@@ -187,16 +111,8 @@ foreach(CHAPTER ${CHAPTERS})
                  "src/${CHAPTER}/${DEMO}/*.gs"
         )
         foreach(SHADER ${SHADERS})
-            if(WIN32)
-                # configure_file(${SHADER} "test")
-                add_custom_command(TARGET ${NAME} PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${SHADER} $<TARGET_FILE_DIR:${NAME}>)
-            elseif(UNIX AND NOT APPLE)
-                file(COPY ${SHADER} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/bin/${CHAPTER})
-            elseif(APPLE)
-                # create symbolic link for *.vs *.fs *.gs
-                get_filename_component(SHADERNAME ${SHADER} NAME)
-                makeLink(${SHADER} ${CMAKE_CURRENT_BINARY_DIR}/bin/${CHAPTER}/${SHADERNAME} ${NAME})
-            endif(WIN32)
+             # configure_file(${SHADER} "test")
+            add_custom_command(TARGET ${NAME} PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${SHADER} $<TARGET_FILE_DIR:${NAME}>)
         endforeach(SHADER)
         # if compiling for visual studio, also use configure file for each project (specifically to set up working directory)
         if(MSVC)
@@ -205,4 +121,10 @@ foreach(CHAPTER ${CHAPTERS})
     endforeach(DEMO)
 endforeach(CHAPTER)
 
-include_directories(${CMAKE_SOURCE_DIR}/includes)
+
+
+
+#target_link_libraries (LearnOpenGL "${Glfw_DIR}/glfw3.lib")
+#target_link_libraries (LearnOpenGL "glad")
+
+#include_directories(${CMAKE_SOURCE_DIR}/includes)
